@@ -1,2 +1,4 @@
 Version 3.5  Notes de la version
 
+- Calcul DeltaT en utilisant "Five Millennium Canon of Solar Eclipses, Espenak & Meeus, 2006"
+- Ajout des dessins de constellation "Tirion" creée par James Trogolo
